infrastructure/aws-eks/1-vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr

  # Must be enabled for EFS
  enable_dns_hostnames = true
  enable_dns_support   = true
}
